[tool.poetry]
name = "f1-rng-discord-venv"
version = "0.1.0"
description = ""
authors = ["Harry Gamblin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.3.2"
gsheets = "^0.6.1"

[tool.poetry.group.dev.dependencies]
gsheets = "^0.6.1"
"discord.py" = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
