[tool.poetry]
name = "f1-rng-discord-venv"
version = "0.1.0"
description = ""
authors = ["Harry Gamblin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.3.2"
pathlib = "^1.0.1"
google-api-python-client = "^2.108.0"
google-auth-httplib2 = "^0.1.1"
google-auth-oauthlib = "^1.1.0"
discord = "^2.3.2"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
gsheets = "^0.6.1"
"discord.py" = "^2.3.2"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
pythonpath = [
    "python/src"
]
testpaths = [
    "python/tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
